--- a/C-2A_EFM.vcxproj.filters
+++ b/C-2A_EFM.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="gear.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="vec3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
