--- a/C-2A_EFM.vcxproj.filters
+++ b/C-2A_EFM.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClInclude Include="forces.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="liftSurface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="damage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
